src/app/features/project-dashboard/chat/chat.component.css
.chat-container {
  position: fixed;
  width: 300px; /* Adjust width as needed */
  max-width: 100%;
  min-height: 40vh;
  max-height: 100%;
  height: auto; /* Allow the height to grow */
  background-color: #f0f4f8;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  overflow: hidden;
  border-radius: 20px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  z-index: 1000; /* Ensure it's above other components */
}

/* Draggable header style */
.chat-header {
  padding: 5px;
  background-color: #007bff; /* Header color */
  color: white; /* Text color */
  cursor: move; /* Indicates the element is movable */
}

.resize-handle, .resize-handle-top, .resize-handle-left {
  /*background-color: #007bff;*/
  position: absolute;
}

.resize-handle {
  bottom: 0;
  right: 0;
  width: 10px;
  height: 10px;
  cursor: nwse-resize; /* Diagonal resize */
}

.resize-handle-top {
  top: 0;
  left: 0;
  right: 0;
  height: 5px;
  cursor: ns-resize; /* Vertical resize */
}

.resize-handle-left {
  left: 0;
  top: 0;
  bottom: 0;
  width: 5px;
  cursor: ew-resize; /* Horizontal resize */
}

.messages {
  overflow-y: auto;
  padding: 10px;
  flex-grow: 1; /* Ensure messages fill the container */
}

.message {
  max-width: 80%;
  word-wrap: break-word;
  margin-bottom: 10px;
  padding: 8px;
  background-color: #e0e0e0;
  border-radius: 10px;
}

.assistant-message {
  background-color: #bbdefb;
}

.user-message {
  background-color: #c8e6c9;
}

.chat-input {
  padding: 8px;
  border: none;
  outline: none;
  width: calc(100% - 16px);
  border-top: 1px solid #ccc; /* Separates input from messages */
}

/*.messages {*/
/*  flex-grow: 1;*/
/*  overflow-y: auto;*/
/*  padding: 10px;*/
/*}*/

/*.message {*/
/*  margin-bottom: 15px;*/
/*  padding: 10px;*/
/*  background-color: #ffffff;*/
/*  border-radius: 10px;*/
/*  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);*/
/*}*/

/*.message-input {*/
/*  padding: 10px;*/
/*  border: 2px solid #4CAF50;*/
/*  border-radius: 10px;*/
/*  outline: none;*/
/*  transition: border-color 0.3s ease;*/
/*}*/

/*.message-input:focus {*/
/*  border-color: #007bff;*/
/*}*/

/*.loading {*/
/*  text-align: center;*/
/*  padding: 10px;*/
/*}*/

